NF-2: Change List.of to Arrays.asList